# RVDataFusionServer

./: .gitignore  CLParking.db  CMakeLists.txt  DataUnit.h  Eoc.cpp  Queue.h  README.md  Vector.h  config.ini  eocConfig.db  eoc_comm.rar  eoc_configure.db  fusiondata.json  global.h  httpServer.cpp  localBusiness.cpp  localBusiness.h  log.conf  main.cpp  timeTask.hpp  version.h
bakCode/: EOCCom.cpp  EOCCom.h  EOCJSON.cpp  EOCJSON.h
client/: FusionClient.cpp  FusionClient.h
common/: Queue.h  common.cpp  common.h  config.cpp  config.h  proc.cpp  proc.h
conan/: build_aarch64.sh  build_local.sh  conanfile.txt
data/: Data.cpp  Data.h  DataUnit.cpp  DataUnit.h  DataUnitFusionData.cpp  DataUnitFusionData.h  DataUnitUtilty.cpp  DataUnitUtilty.h  ReSendQueue.cpp  ReSendQueue.h
db/: CLParking.cpp  CLParking.db  CLParking.h  DB.cpp  RoadsideParking.cpp  RoadsideParking.db  RoadsideParking.h  dbInfo.cpp  dbInfo.h  eoc_configure.cpp  eoc_configure.db  eoc_configure.h  sqliteApi.cpp  sqliteApi.h
eoc/: Eoc.cpp  Eoc.h
eocCom/: DBCom.cpp  DBCom.h  EOCCom.cpp  EOCCom.h  EOCJSON.cpp  EOCJSON.h  fileFun.cpp  fileFun.h
eoc_comm/: base64.c  base64.h  c500SDK.cpp  c500SDK.h  cJSON.c  cJSON.h  cck1_eoc_api.cpp  cck1_eoc_api.hpp  configure_eoc_init.cpp  configure_eoc_init.h  db_tool.cpp  db_tool.hpp  dns_server.cpp  dns_server.h  eoc.pem  eoc_comm.cpp  eoc_comm.hpp  logger.c  logger.h  main.cpp.bak  md5.h  sha1.c  sha1.h  sqlite_db.cpp.bak  sqlite_db.h.bak  sqlite_eoc_db.cpp  sqlite_eoc_db.h  ttcp.cpp  ttcp.hpp  uri.h  yyls_eoc_comm.cpp  yyls_eoc_comm.hpp
getData/: GetData.cpp
glogHelper/: GlogHelper.cpp  GlogHelper.h
httpServer/: httpServer.cpp  httpServer.h
include/: ClientInfo.h  FusionServer.h  GetData.h  Log.h  ParseFlag.h  version.h  version.h.in
kafka/: KafkaConsumer.cpp  KafkaConsumer.h
lib/: AlgorithmParam.h
localBussiness/: localBusiness.cpp  localBusiness.h
log/: Log.cpp  Log.h
logFileCleaner/: LogFileCleaner.cpp  LogFileCleaner.h
merge/: mergeStruct.cpp
monitor/: PacketLoss.hpp
multiView/: MultiViewClientInfo.cpp  MultiViewServer.cpp
multiview/: MultiviewClientInfo.cpp  MultiviewClientInfo.h  MultiviewServer.cpp  MultiviewServer.h
myTcp/: MyTcpClient.hpp  MyTcpHandler.hpp  MyTcpServer.hpp
nebulalink/: Nebulalink.cpp  Nebulalink.h  nebulalink.perceptron3.0.5.pb.cc  nebulalink.perceptron3.0.5.pb.h  transform.cpp  transform.h
net/: com.h  cpp-icmplib.h
os/: os.cpp  os.h  timeTask.hpp
ringBuffer/: RingBuffer.h
ringbuffer/: RingBuffer.cpp  RingBuffer.h
server/: ClientInfo.cpp  ClientInfo.h  DataUnit.cpp  DataUnit.h  (+2 more)
test/: AlgorithmParamOld.h  CMakeLists.txt  GetLocalDataSend.cpp  addConfigXML.cpp  algorithmParamExchange.cpp  algorithmParamExchange.cpp.bak  testClient.cpp  testCommon.cpp  testFusionClient.cpp  testGetData.cpp  testIni.cpp  testKafka.cpp  testServer.cpp  testSingalControl.cpp  testTempClass.cpp  testTimeTask.cpp
test/data_test/merge_data/: m_ct1645679190529_rt1645679189565.txt  m_ct1645679190648_rt1645679189623.txt  m_ct1645679190722_rt1645679189697.txt  m_ct1645679190848_rt1645679189837.txt  m_ct1645679190927_rt1645679189913.txt  m_ct1645679191051_rt1645679190053.txt  m_ct1645679191122_rt1645679190127.txt  m_ct1645679191245_rt1645679190273.txt  m_ct1645679191331_rt1645679190343.txt  m_ct1645679191442_rt1645679190418.txt  m_ct1645679191523_rt1645679190488.txt  m_ct1645679191649_rt1645679190632.txt  m_ct1645679191726_rt1645679190702.txt  m_ct1645679191849_rt1645679190848.txt  m_ct1645679191950_rt1645679190919.txt  m_ct1645679192032_rt1645679191064.txt  m_ct1645679192109_rt1645679191137.txt  m_ct1645679192179_rt1645679191208.txt  m_ct1645679192281_rt1645679191279.txt  m_ct1645679192450_rt1645679191423.txt  m_ct1645679192526_rt1645679191498.txt  m_ct1645679192649_rt1645679191643.txt  m_ct1645679192725_rt1645679191713.txt  m_ct1645679192848_rt1645679191858.txt  m_ct1645679192925_rt1645679191928.txt  m_ct1645679193035_rt1645679192003.txt  m_ct1645679193123_rt1645679192143.txt  m_ct1645679193249_rt1645679192219.txt  m_ct1645679193327_rt1645679192364.txt  m_ct1645679193445_rt1645679192434.txt  m_ct1645679193530_rt1645679192503.txt  m_ct1645679193647_rt1645679192649.txt  m_ct1645679193726_rt1645679192724.txt  m_ct1645679193849_rt1645679192863.txt  m_ct1645679193927_rt1645679192938.txt  m_ct1645679194051_rt1645679193079.txt  m_ct1645679194124_rt1645679193154.txt  m_ct1645679194248_rt1645679193224.txt  m_ct1645679194323_rt1645679193298.txt  m_ct1645679194450_rt1645679193443.txt  (+5868 more)
test/data_test1/merge_data/: m_ct1645679190570_rt1645679189593.txt  m_ct1645679190648_rt1645679189664.txt  m_ct1645679190717_rt1645679189744.txt  m_ct1645679190810_rt1645679189814.txt  m_ct1645679190935_rt1645679189964.txt  m_ct1645679191052_rt1645679190039.txt  m_ct1645679191141_rt1645679190114.txt  m_ct1645679191246_rt1645679190264.txt  m_ct1645679191572_rt1645679190559.txt  m_ct1645679191670_rt1645679190634.txt  m_ct1645679191742_rt1645679190709.txt  m_ct1645679191847_rt1645679190859.txt  m_ct1645679191919_rt1645679190934.txt  m_ct1645679192016_rt1645679191009.txt  m_ct1645679192096_rt1645679191085.txt  m_ct1645679192164_rt1645679191154.txt  m_ct1645679192263_rt1645679191229.txt  m_ct1645679192348_rt1645679191379.txt  m_ct1645679192425_rt1645679191454.txt  m_ct1645679192495_rt1645679191529.txt  m_ct1645679192562_rt1645679191529.txt  m_ct1645679192654_rt1645679191674.txt  m_ct1645679192744_rt1645679191749.txt  m_ct1645679192863_rt1645679191899.txt  m_ct1645679192938_rt1645679191974.txt  m_ct1645679193058_rt1645679192050.txt  m_ct1645679193137_rt1645679192125.txt  m_ct1645679193264_rt1645679192275.txt  m_ct1645679193354_rt1645679192345.txt  m_ct1645679193452_rt1645679192424.txt  m_ct1645679193539_rt1645679192570.txt  m_ct1645679193662_rt1645679192645.txt  m_ct1645679193739_rt1645679192720.txt  m_ct1645679193862_rt1645679192870.txt  m_ct1645679193936_rt1645679192945.txt  m_ct1645679194060_rt1645679193095.txt  m_ct1645679194148_rt1645679193165.txt  m_ct1645679194266_rt1645679193240.txt  m_ct1645679194340_rt1645679193315.txt  m_ct1645679194461_rt1645679193465.txt  (+5857 more)
(+96 files in other folders)
